test_output_full.txt
fluxus> build (lib + exe + test) with ghc-9.8.4
Preprocessing library for fluxus-0.1.0.0..
Building library for fluxus-0.1.0.0..
Preprocessing test suite 'fluxus-test' for fluxus-0.1.0.0..
Building test suite 'fluxus-test' for fluxus-0.1.0.0..
[3 of 5] Compiling Test.Fluxus.Parser.Go

/home/qwe12345678/hyperstatic2/test/Test/Fluxus/Parser/Go.hs:536:71: error: [GHC-83865]
    • Couldn't match expected type ‘[Char]’ with actual type ‘Text’
    • In the second argument of ‘(++)’, namely ‘lib’
      In the second argument of ‘($)’, namely
        ‘"Parser failed for import " ++ lib’
      In the expression:
        expectationFailure $ "Parser failed for import " ++ lib
    |
536 |         Left _ -> expectationFailure $ "Parser failed for import " ++ lib
    |                                                                       ^^^

/home/qwe12345678/hyperstatic2/test/Test/Fluxus/Parser/Go.hs:670:72: error: [GHC-83865]
    • Couldn't match expected type ‘[Char]’ with actual type ‘Text’
    • In the second argument of ‘(++)’, namely ‘pkgName’
      In the second argument of ‘($)’, namely
        ‘"Parser failed for package " ++ pkgName’
      In the expression:
        expectationFailure $ "Parser failed for package " ++ pkgName
    |
670 |         Left _ -> expectationFailure $ "Parser failed for package " ++ pkgName
    |                                                                        ^^^^^^^

Error: [S-7282]
       Stack failed to execute the build plan.
       
       While executing the build plan, Stack encountered the error:
       
       [S-7011]
       While building package fluxus-0.1.0.0 (scroll up to its section to see the error) using:
       /home/qwe12345678/.stack/setup-exe-cache/x86_64-linux/Cabal-simple_w2MFVN35_3.10.3.0_ghc-9.8.4 --verbose=1 --builddir=.stack-work/dist/x86_64-linux/ghc-9.8.4 build lib:fluxus exe:fluxus exe:test-python-lexer exe:test-python-parser test:fluxus-test --ghc-options ""
       Process exited with code: ExitFailure 1 
